src/components/ProductItem/ProductItem.css
.product-container {
  background-color: #EAEAEA;
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: center;
}

.product-item {
  flex: 1 0 calc(23% - 10px);
  box-sizing: border-box;
  max-width: calc(23% - 10px);
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.product-item__image-container {
  background-color: white;
  border-radius: 8px;
  padding: 7px;
  box-sizing: border-box;
  width: 100%;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
  padding-top: 100%; 
}

.product-item__image {
  max-width: 100%;
  max-height: 100%;
  width: auto; 
  height: auto; 
  border-radius: 8px 8px 0 0;
  object-fit: contain;
  position: absolute;
  top: -20px;


}

.product-item__details {
  width: 100%;
  box-sizing: border-box;
  padding: 8px 0;
  text-align: center;
}

.product-item__title {
  font-size: 1.2em;
  margin: 8px 0;
}

.product-item__tags {
  font-size: 0.9em;
  color: #666;
  margin: 4px 0;
}

.product-item__price {
  font-size: 1.1em;
  color: #000;
  font-weight: bold;
  margin: 8px 0;
}

